feat: add search and sort support for GOs
